# R36S-CoverManager

./: Cargo.toml
src/: main.rs
src/custom_windows/: enums.rs  file_system.rs  mod.rs
src/custom_windows/utils/: mod.rs  pcwstr.rs  wide_string.rs
ui/: app-window.slint  app.slint  global.slint
ui/components/: collapse.slint  rooms-file-explorer.slint
ui/views/: main.slint
