[package]
name = "R36S-CoverManager"
version = "0.1.0"
edition = "2021"

[dependencies]
#gtk = { version = "0.9.2", package = "gtk4", features = ["v4_16"] }
slint = "1.8.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    #Custom.
    "Win32_Storage_FileSystem",
    "Win32_Devices_DeviceAndDriverInstallation"
]

[build-dependencies]
slint-build = "1.8.0"
